src/components/navbar.module.scss
.navbar {
  text-transform: lowercase;
  position: sticky;
  right: 0;
  top: 0;
  bottom: unset;
  @media (pointer: coarse) {
    position: fixed;
    top: unset;
    bottom: 0;
  }
  background-color: var(--off-white);
  ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    line-height: 1.6;
    margin: 0;
    padding: 1em;
    list-style-type: none;
    li {
      font-size: clamp(0.8em, 2vw, 1em);
      margin: 0 .5ch;
      &::after {
        content: ".";
      }
      a {
        text-decoration: none;
        border-bottom: none;
        &:hover {
          border-bottom: var(--main-dark) 2px solid;
        }
      }
    }
  }
}

.active {
  border-bottom: var(--dark) 2px solid !important;
}

